@startuml

title __EDUCATIONAL GAME's Class Diagram__\n

  namespace  {
    namespace educational.controller {
      class educational.controller.CatchTheMouseController {
      }
    }
  }
  

  namespace  {
    namespace educational.controller {
      class educational.controller.GeneralController {
      }
    }
  }
  

  namespace  {
    namespace educational.controller {
      class educational.controller.HowManyAreThereController {
      }
    }
  }
  

  namespace  {
    namespace educational.controller {
      class educational.controller.MainMenuController {
      }
    }
  }
  

  namespace  {
    namespace educational.controller {
      class educational.controller.OlderController {
      }
    }
  }
  

  namespace  {
    namespace educational.controller {
      class educational.controller.ScoreController {
      }
    }
  }
  

  namespace  {
    namespace educational.controller {
      class educational.controller.SubtractWithCarriedController {
      }
    }
  }
  

  namespace  {
    namespace educational.controller {
      class educational.controller.SubtractsController {
      }
    }
  }
  

  namespace  {
    namespace educational.controller {
      class educational.controller.SumsController {
      }
    }
  }
  

  namespace  {
    namespace educational.controller {
      class educational.controller.UnderController {
      }
    }
  }
  

  namespace  {
    namespace educational.model {
      class educational.model.FileUtils {
      }
    }
  }
  

  namespace  {
    namespace educational.model {
      class educational.model.Main {
      }
    }
  }
  

  namespace  {
    namespace educational.model {
      class educational.model.Player {
      }
    }
  }
  

  namespace  {
    namespace educational.record {
      class educational.record.HowManyRecord {
      }
    }
  }
  

  namespace  {
    namespace educational.record {
      class educational.record.MouseRecord {
      }
    }
  }
  

  namespace  {
    namespace educational.record {
      abstract class educational.record.Record {
      }
    }
  }
  

  namespace  {
    namespace educational.record {
      class educational.record.SubtractRecord {
      }
    }
  }
  

  namespace  {
    namespace educational.record {
      class educational.record.SubtractWithCarriedRecord {
      }
    }
  }
  

  namespace  {
    namespace educational.record {
      class educational.record.SumsRecord {
      }
    }
  }
  

  educational.controller.CatchTheMouseController -up-|> educational.controller.GeneralController
  educational.controller.GeneralController .up.|> javafx.fxml.Initializable
  educational.controller.HowManyAreThereController -up-|> educational.controller.GeneralController
  educational.controller.MainMenuController -up-|> educational.controller.GeneralController
  educational.controller.OlderController -up-|> educational.controller.GeneralController
  educational.controller.ScoreController -up-|> educational.controller.GeneralController
  educational.controller.SubtractWithCarriedController -up-|> educational.controller.SubtractsController
  educational.controller.SubtractsController -up-|> educational.controller.GeneralController
  educational.controller.SumsController -up-|> educational.controller.GeneralController
  educational.controller.UnderController -up-|> educational.controller.GeneralController
  educational.model.Main -up-|> javafx.application.Application
  educational.record.HowManyRecord -up-|> educational.record.Record
  educational.record.MouseRecord -up-|> educational.record.Record
  educational.record.SubtractRecord -up-|> educational.record.Record
  educational.record.SubtractWithCarriedRecord -up-|> educational.record.Record
  educational.record.SumsRecord -up-|> educational.record.Record


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
